--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 .env
 *.env
+# ignores all files
+#  uploaded to upload folder
+**/upload/*
 # dependencies
 /node_modules
 /.pnp
